--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,17 +25,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-database:10.2.6'
     implementation 'com.google.firebase:firebase-messaging:10.2.6'
     implementation 'com.google.firebase:firebase-core:10.2.6'
     implementation 'com.google.firebase:firebase-auth:10.2.6'
     implementation 'com.google.firebase:firebase-invites:10.2.6'
-
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     testImplementation 'junit:junit:4.12'
 }
 
