Added after ride query notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         <receiver
             android:name=".RideStatusReceiver"
             android:exported="true" />
+
+        <receiver
+            android:name=".RideCompleteReceiver"
+            android:exported="true" />
     </application>
 
 </manifest>
